--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     </header>
 
     <main>
+
+        <section class="community">
+            <h3 class="community-title">Ready To Build Your Community?</h3>
+            <a class="community-link" href="#" title="Sign up for free">Get Started For Free</a>
+        </section>
     </main>
 
     <footer class="footer">
@@ -36,7 +41,7 @@
                 <img class="footer-logo__image" src="/img/logo.webp" alt="Logo Hunddle" title="Hunddle">
             </a>
             <div class="footer-columns">
-                <ul class="footer-columns__column">
+                <ul class="footer-columns__contact">
                     <li class="footer-columns__item footer-columns__icon footer-icon__map">
                         <a class="footer-columns__href" target="_blank" href="https://www.google.com.br/maps">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 123.</a>
                     </li>
