--- a/index.html
+++ b/index.html
@@ -23,20 +23,90 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="header-content container">
+            <a class="header-logo" href="/">
+                <img class="header-logo__image" src="img/logo.svg" alt="Logo Huddle" title="Huddle">
+            </a>
+            <a class="header-link" href="#">Try It Free</a>
+        </div>
     </header>
 
     <main>
+        <section class="banner">
+            <div class="banner-content container">
+                <div class="banner-column">
+                    <h1 class="banner-title">Build The Community Your Fans Will Love</h1>
+                    <p class="banner-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <a class="banner-link" href="#" title="Sign up for free">Get Started For Free</a>
+                </div>
+                <div class="banner-column">
+                    <img class="banner-image" src="img/illustration-mockups.svg" alt="Mockups" title="Mockups">
+                </div>
+            </div>
+        </section>
 
-        <section class="community">
-            <h3 class="community-title">Ready To Build Your Community?</h3>
-            <a class="community-link" href="#" title="Sign up for free">Get Started For Free</a>
+        <section class="card container">
+            <div class="card-content">
+                <div class="card-column card-column__text">
+                    <h2 class="card-title">Grow Together</h2>
+                    <p class="card-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    </p>
+                </div>
+                <div class="card-column card-column__image">
+                    <img class="card-image" src="img/illustration-grow-together.svg" alt="Grow Together" title="Grow Together">
+                </div>
+            </div>
+        </section>
+
+        <section class="card container">
+            <div class="card-content">
+                <div class="card-column card-column__text card-column__right">
+                    <h2 class="card-title">Flowing Conversations</h2>
+                    <p class="card-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    </p>
+                </div>
+                <div class="card-column card-column__image">
+                    <img class="card-image" src="img/illustration-flowing-conversation.svg" alt="Flowing Conversations" title="Flowing Conversations">
+                </div>
+            </div>
+        </section>
+
+        <section class="card container">
+            <div class="card-content">
+                <div class="card-column card-column__text">
+                    <h2 class="card-title">Your Users</h2>
+                    <p class="card-text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    </p>
+                </div>
+                <div class="card-column card-column__image">
+                    <img class="card-image" src="img/illustration-your-users.svg" alt="Your Users" title="Your Users">
+                </div>
+            </div>
+        </section>
+
+        <section class="community container">
+            <div class="community-content">
+                <h3 class="community-title">Ready To Build Your Community?</h3>
+                <a class="community-link" href="#" title="Sign up for free">Get Started For Free</a>
+            </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="content">
+        <div class="container">
             <a class="footer-logo__href" href="/" title="Hunddle">
                 <img class="footer-logo__image" src="/img/logo.webp" alt="Logo Hunddle" title="Hunddle">
             </a>
@@ -54,24 +124,24 @@
                 </ul>
                 <ul class="footer-columns__column">
                     <li class="footer-columns__item">
-                        <a class="footer-columns__href" href="">About Us</a>
+                        <a class="footer-columns__href" href="#">About Us</a>
                     </li>
                     <li class="footer-columns__item">
-                        <a class="footer-columns__href" href="">What We Do</a>
+                        <a class="footer-columns__href" href="#">What We Do</a>
                     </li>
                     <li class="footer-columns__item">
-                        <a class="footer-columns__href" href="">FAQ</a>
+                        <a class="footer-columns__href" href="#">FAQ</a>
                     </li>
                 </ul>
                 <ul class="footer-columns__column">
                     <li class="footer-columns__item">
-                        <a class="footer-columns__href" href="">Career</a>
+                        <a class="footer-columns__href" href="#">Career</a>
                     </li>
                     <li class="footer-columns__item">
-                        <a class="footer-columns__href" href="">Blog</a>
+                        <a class="footer-columns__href" href="#">Blog</a>
                     </li>
                     <li class="footer-columns__item">
-                        <a class="footer-columns__href" href="">Contact Us</a>
+                        <a class="footer-columns__href" href="#">Contact Us</a>
                     </li>
                 </ul>
                 <ul class="footer-columns__social">
