--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
     <footer class="footer">
         <div class="container">
-            <a class="footer-logo__href" href="/" title="Hunddle">
-                <img class="footer-logo__image" src="/img/logo.webp" alt="Logo Hunddle" title="Hunddle">
+            <a class="footer-logo__href" href="/" title="Huddle">
+                <img class="footer-logo__image" src="/img/logo.svg" alt="Logo Huddle" title="Huddle">
             </a>
             <div class="footer-columns">
                 <ul class="footer-columns__contact">
