--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-logo__href" href="/" title="Huddle">
-                <img class="footer-logo__image" src="/img/logo.svg" alt="Logo Huddle" title="Huddle">
+                <img class="footer-logo__image" src="img/logo.svg" alt="Logo Huddle" title="Huddle">
             </a>
             <div class="footer-columns">
                 <ul class="footer-columns__contact">
