--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,19 +21,16 @@
     <meta name="robots" content="index">
     <meta rel="canonical" href="/">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="header-content container">
             <a class="header-logo" href="/">
-                <img class="header-logo__image" src="img/logo.svg" alt="Logo Huddle" title="Huddle">
+                <img class="header-logo__image" src="img/logo.svg" alt="Logo Huddle" title="Huddle" loading="lazy">
             </a>
-            <a class="header-link" href="#">Try It Free</a>
+            <a class="header-link" href="#" title="Sign up for free">Try It Free</a>
         </div>
     </header>
 
@@ -37,12 +39,12 @@
             <div class="banner-content container">
                 <div class="banner-column">
                     <h1 class="banner-title">Build The Community Your Fans Will Love</h1>
-                    <p class="banner-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p class="banner-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     <a class="banner-link" href="#" title="Sign up for free">Get Started For Free</a>
                 </div>
                 <div class="banner-column">
-                    <img class="banner-image" src="img/illustration-mockups.svg" alt="Mockups" title="Mockups">
+                    <img class="banner-image" src="img/illustration-mockups.svg" alt="Mockup web and mobile" title="Mockup web and mobile" loading="lazy">
                 </div>
             </div>
         </section>
@@ -52,14 +54,15 @@
                 <div class="card-column card-column__text">
                     <h2 class="card-title">Grow Together</h2>
                     <p class="card-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        It has survived not only five centuries, but also the leap into electronic typesetting,
+                        remaining essentially unchanged.
                     </p>
                 </div>
                 <div class="card-column card-column__image">
-                    <img class="card-image" src="img/illustration-grow-together.svg" alt="Grow Together" title="Grow Together">
+                    <img class="card-image" src="img/illustration-grow-together.svg" alt="Two people working" title="Grow Together" loading="lazy">
                 </div>
             </div>
         </section>
@@ -69,13 +72,13 @@
                 <div class="card-column card-column__text card-column__right">
                     <h2 class="card-title">Flowing Conversations</h2>
                     <p class="card-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </div>
                 <div class="card-column card-column__image">
-                    <img class="card-image" src="img/illustration-flowing-conversation.svg" alt="Flowing Conversations" title="Flowing Conversations">
+                    <img class="card-image" src="img/illustration-flowing-conversation.svg" alt="People at a table talking" title="Flowing Conversations" loading="lazy">
                 </div>
             </div>
         </section>
@@ -85,14 +88,15 @@
                 <div class="card-column card-column__text">
                     <h2 class="card-title">Your Users</h2>
                     <p class="card-text">
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        It has survived not only five centuries, but also the leap into electronic typesetting,
+                        remaining essentially unchanged.
                     </p>
                 </div>
                 <div class="card-column card-column__image">
-                    <img class="card-image" src="img/illustration-your-users.svg" alt="Your Users" title="Your Users">
+                    <img class="card-image" src="img/illustration-your-users.svg" alt="People talking" title="Your Users" loading="lazy">
                 </div>
             </div>
         </section>
@@ -108,18 +112,20 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-logo__href" href="/" title="Huddle">
-                <img class="footer-logo__image" src="img/logo.svg" alt="Logo Huddle" title="Huddle">
+                <img class="footer-logo__image" src="img/logo.svg" alt="Logo Huddle" title="Huddle" loading="lazy">
             </a>
             <div class="footer-columns">
                 <ul class="footer-columns__contact">
                     <li class="footer-columns__item footer-columns__icon footer-icon__map">
-                        <a class="footer-columns__href" target="_blank" href="https://www.google.com.br/maps">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 123.</a>
+                        <a class="footer-columns__href" target="_blank" href="https://www.google.com.br/maps" title="Go to address">Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit, 123.
+                        </a>
                     </li>
                     <li class="footer-columns__item footer-columns__icon footer-icon__phone">
-                        <a class="footer-columns__href" target="_blank" href="tel:+5548999999999">(48) 99999-9999</a>
+                        <a class="footer-columns__href" target="_blank" href="tel:+5548999999999" title="To telephone">(48) 99999-9999</a>
                     </li>
                     <li class="footer-columns__item footer-columns__icon footer-icon__mail">
-                        <a class="footer-columns__href" target="_blank" href="mailto:example@huddle.com">example@huddle.com</a>
+                        <a class="footer-columns__href" target="_blank" href="mailto:example@huddle.com" title="Send email">example@huddle.com</a>
                     </li>
                 </ul>
                 <ul class="footer-columns__column">
@@ -146,13 +152,13 @@
                 </ul>
                 <ul class="footer-columns__social">
                     <li class="footer-social__item">
-                        <a class="footer-social__href footer-social__icon footer-icon__facebook" target="_blank" href="https://www.facebook.com/" title="Facebook"></a>
+                        <a class="footer-social__href footer-social__icon footer-icon__facebook" target="_blank" href="https://www.facebook.com/" title="Go to Facebook"></a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__href footer-social__icon footer-icon__instagram" target="_blank" href="https://www.instagram.com/" title="Instagram"></a>
+                        <a class="footer-social__href footer-social__icon footer-icon__instagram" target="_blank" href="https://www.instagram.com/" title="Go to Instagram"></a>
                     </li>
                     <li class="footer-social__item">
-                        <a class="footer-social__href footer-social__icon footer-icon__twitter" target="_blank" href="https://www.twitter.com/" title="Twitter"></a>
+                        <a class="footer-social__href footer-social__icon footer-icon__twitter" target="_blank" href="https://www.twitter.com/" title="Go to Twitter"></a>
                     </li>
                 </ul>
             </div>
@@ -160,4 +166,5 @@
         </div>
     </footer>
 </body>
+
 </html>
